--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 @charset "UTF-8";
 
-body {background-color:green;}
+
+#rain-something {
+  z-index: -1;
+  background-image: url(/img/main1.jpeg);
+  background-size:100%;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+
